--- a/configData.json
+++ b/configData.json
@@ -14,6 +14,7 @@
     "instructions_size": [1200, 900],
     "end_text":"end_text.png",
 
+    "points_name": "POINTS",
     "points": 0,
     "pos_points": [400, 200],
     "text_size": 30
