--- a/configData.json
+++ b/configData.json
@@ -2,14 +2,14 @@
     "screen_color": [0, 0, 0],
     "ITI": 0,
     "start_block": 0,
-    "blocks": ["treinoAB","treinoAC", "testeEq"],
-    "instructions": ["n","n","inst2.jpg"],
-    "comp display": ["SMTS", "SMTS", "SMTS"],
-    "repetitions": [3, 3, 1],
-    "criteria": [3, 3, 12],
+    "blocks": ["Phase3_training"],
+    "instructions": ["n"],
+    "comp display": ["SMTS"],
+    "repetitions": [0],
+    "criteria": [0],
     "pos_sample": [0, 200],
     "pos_comps": [[-350, -200],[350, -200]],
-    "stimulus_size": [250, 250],
+    "stimulus_size": [450, 300],
     "consequence_size": [1800,900],
     "instructions_size": [1200, 900],
     "end_text":"end_text.png"
