--- a/configData.json
+++ b/configData.json
@@ -1,8 +1,8 @@
 {
     "screen_color": [0, 0, 0],
     "ITI": 0,
-    "start_block": 0,
-    "blocks": ["treinoAB","treinoAC", "testeEq"],
+    "start_block": 1,
+    "blocks": ["ABtraining","ACtraining", "testEq"],
     "instructions": ["n","n","inst2.jpg"],
     "comp display": ["SMTS", "SMTS", "SMTS"],
     "repetitions": [3, 3, 1],
