--- a/configData.json
+++ b/configData.json
@@ -5,6 +5,7 @@
         0
     ],
     "ITI": 0,
+    "volume": 0.5,
     "start_block": 1,
     "blocks": [
         "ABtraining",
@@ -32,8 +33,14 @@
         12
     ],
     "pos_sample": [
-        0,
-        200
+        [
+            0,
+            200
+        ],
+        [
+            350,
+            250
+        ]
     ],
     "pos_comps": [
         [
@@ -46,8 +53,8 @@
         ]
     ],
     "stimulus_size": [
-        250,
-        250
+        200,
+        200
     ],
     "consequence_size": [
         1800,
